fixed eclipse warnings